# CPPDoctor

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  test.sh
converter/: CMakeLists.txt  main.cpp
converter/include/xitren/: solvers.hpp
converter/src/: main.cpp
converter/tests/: CMakeLists.txt
generator/: CMakeLists.txt
generator/include/xitren/parsers/errors/: comment_block.hpp  exceptions.hpp  locator.hpp  locator_pipe.hpp  parser.hpp  sink.hpp
generator/src/: main.cpp
generator/tests/: CMakeLists.txt  all_test.cpp  base_test.cpp  locator_test.cpp  parser_test.cpp  test_data.cpp
include/xitren/: problem.hpp  problem_const.hpp  problem_gen.hpp  problem_pool.hpp  problems_pool.hpp  problems_pool_emb.hpp
include/xitren/json/: convertors.hpp
tests/: doctor_base_gen_test.cpp  doctor_base_test.cpp  problems.json
